atualização: estágio inicial da reconstrução do projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,26 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
 </head>
+
 <body>
-    <h1>Calculadora Geométrica</h1>
+    <section class="calculator-section">
+        <h1>Calculadora De Área de Formas Geométricas</h1>
+        <h2>Escolha a forma geométrica da qual deseja calcular a área:</h2>
+        <div class="buttons-container">
+            <button id="triangle">Triângulo</button>
+            <button id="rectangle">Retângulo</button>
+            <button id="square">Quadrado</button>
+            <button id="trapezium">Trapézio</button>
+            <button id="circle">Círculo</button>
+        </div>
+        <div class="input-container">
+            <div class="quick-review-container"></div>
+        </div>
+    </section>
+    <hr>
+    <section class="results-section">
+        <h2>Resultado:</h2>
+    </section>
 </body>
+
 </html>
