atualização: event listener adicionado em todos os botões das áreas geométricas

--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
             <button id="trapezium">Trapézio</button>
             <button id="circle">Círculo</button>
         </div>
-        <div class="input-container">
-            <div class="quick-review-container"></div>
-        </div>
+        <div class="calculator-container"></div>
     </section>
-    <hr>
-    <section class="results-section">
-        <h2>Resultado:</h2>
-    </section>
+    <section class="results-section"></section>
 </body>
 
 </html>
